small spacing fix

--- a/style/sections.css
+++ b/style/sections.css
@@ -79,7 +79,7 @@
 }
 
 .col-1-1.mockup {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 .col-1-1.mockup img {
